--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -122,7 +122,19 @@
       "country": [
         "مصر",
         "السعودية",
-        "الكويت"
+        "الكويت",
+        "الإمارات",
+        "الأردن",
+        "عُمان",
+        "السودان",
+        "ليبيا",
+        "تونس",
+        "الجزائر",
+        "المغرب",
+        "قطر",
+        "العراق",
+        "موريتانيا",
+        "جنوب أفريقيا"
       ]
     },
     "copyRight": "جميع الحقوق محفوظة ل سوق الانتاج الحيوانى (ِAPM) 2025",
@@ -231,14 +243,21 @@
       "title": "تم إرسال طلبك",
       "message": "تم إرسال طلبك وسوف يتم الرد في أسرع وقت",
       "backToHome": "الرجوع إلى الصفحة الرئيسية"
-    }
+    },
+    "deleteAccount": "حذف الحساب",
+    "deleteAccountTitle": "حذف الحساب نهائياً",
+    "deleteAccountWarning": "هل أنت متأكد من حذف حسابك؟ لن تتمكن من استرجاعه بعد الحذف.",
+    "confirmDelete": "تأكيد الحذف",
+    "cancel": "إلغاء",
+    "deleting": "جاري الحذف...",
+    "accountDeleted": "تم حذف حسابك بنجاح",
+    "deleteError": "حدث خطأ أثناء حذف الحساب"
   },
   "common": {
     "loading": "جاري التحميل...",
     "error": "خطأ",
     "retry": "إعادة المحاولة"
   },
-
   "article": {
     "title": "مكتبة المقالات",
     "subtitle": "اكتشف مجموعة متنوعة من المقالات المفيدة والمعلومات القيمة",
@@ -297,20 +316,39 @@
     "errorSendingMessage": "خطأ في إرسال الرسالة",
     "errorLoadingUserData": "خطأ في تحميل بيانات المستخدم"
   },
-  "notifications": {
+ "notifications": {
     "title": "الإشعارات",
-    "noNotifications": "لا توجد إشعارات",
-    "noNotificationsDesc": "ستظهر إشعاراتك هنا عندما تتوفر",
-    "unread": "غير مقروءة",
-    "markAsRead": "تعليم كمقروءة",
-    "markAllAsRead": "تعليم الكل كمقروءة",
+    "unread": "غير مقروء",
+    "markAsRead": "تعيين كمقروء",
+    "markAllAsRead": "تعيين الكل كمقروء",
     "delete": "حذف",
     "clearAll": "حذف الكل",
-    "autoDelete": "سيتم حذف الإشعارات تلقائياً بعد 30 يوم",
+    "refresh": "تحديث",
+    "marking": "جاري التعيين...",
+    "deleting": "جاري الحذف...",
+    "markedAsRead": "تم التعيين كمقروء",
+    "allMarkedAsRead": "تم تعيين الكل كمقروء",
+    "deleted": "تم حذف الإشعار",
+    "fetchError": "فشل تحميل الإشعارات",
+    "markError": "فشل التعيين كمقروء",
+    "markAllError": "فشل تعيين الكل كمقروء",
+    "deleteError": "فشل حذف الإشعار",
+    "noNotifications": "لا توجد إشعارات",
+    "noNotificationsDesc": "ستظهر هنا جميع إشعاراتك عند وصولها",
+    "autoDelete": "يتم حذف الإشعارات تلقائياً بعد 30 يوماً",
+    "page": "صفحة",
+    "of": "من",
+    "justNow": "الآن",
+    "minutesAgo": "منذ",
+    "minutes": "دقيقة",
+    "hoursAgo": "منذ",
+    "hours": "ساعة",
+    "daysAgo": "منذ",
+    "days": "يوم",
     "filter": {
       "all": "الكل",
-      "unread": "غير مقروءة",
-      "read": "مقروءة"
+      "unread": "غير مقروء",
+      "read": "مقروء"
     }
   },
   "auction": {
