--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -55,43 +55,58 @@
       "loginSuccess": "تم تسجيل الدخول بنجاح!",
       "forgotPassword": "هل نسيت كلمة السر؟"
     },
-    "register": {
-      "title": "إنشاء حساب",
-      "chooseCountry": "اختيار الدولة",
-      "uploadProfileImage": "تحميل صورة الملف الشخصي",
-      "selectCountry": "اختر الدولة",
-      "countryRequired": "يرجى اختيار الدولة",
-      "selectCountryFirst": "يرجى اختيار الدولة أولاً",
-      "name": "الاسم",
-      "nameRequired": "الاسم مطلوب",
-      "phone": "رقم الهاتف",
-      "phoneRequired": "رقم الهاتف مطلوب",
-      "email": "البريد الإلكتروني",
-      "governorate": "اختر المحافظة",
-      "governorateRequired": "المحافظة مطلوبة",
-      "activityType": "نوع النشاط",
-      "activityRequired": "نوع النشاط مطلوب",
-      "address": "العنوان",
-      "addressRequired": "العنوان مطلوب",
-      "password": "كلمة المرور",
-      "passwordRequired": "كلمة المرور مطلوبة",
-      "passwordLength": "كلمة المرور يجب أن تكون 8 أحرف على الأقل",
-      "passwordConfirmation": "تأكيد كلمة المرور",
-      "confirmPasswordRequired": "تأكيد كلمة المرور مطلوب",
-      "passwordMismatch": "كلمتا المرور غير متطابقتين",
-      "accountType": "نوع الحساب",
-      "individual": "فردي",
-      "organization": "شركات",
-      "next": "التالي",
-      "back": "رجوع",
-      "createButton": "إنشاء الحساب",
-      "creating": "جارٍ الإرسال...",
-      "haveAccount": "لديك حساب بالفعل؟",
-      "loginLink": "تسجيل الدخول",
-      "successMessage": "تم إنشاء الحساب بنجاح",
-      "error": "حدث خطأ أثناء إنشاء الحساب",
-      "fillAllFields": "يرجى ملء جميع الحقول المطلوبة"
-    }
+  "register": {
+    "title": "إنشاء حساب",
+    "chooseCountry": "اختيار الدولة",
+    "uploadProfileImage": "تحميل صورة الملف الشخصي",
+    "imageRequirements": "الصيغ المدعومة: JPG, PNG, GIF, WEBP (حد أقصى 5 ميجابايت)",
+    "removeImage": "إزالة الصورة",
+    "invalidImageType": "نوع الصورة غير مدعوم. يرجى اختيار صورة بصيغة JPG, PNG, GIF أو WEBP",
+    "imageTooLarge": "حجم الصورة كبير جداً. الحد الأقصى 5 ميجابايت",
+    "selectCountry": "اختر الدولة",
+    "countryRequired": "يرجى اختيار الدولة",
+    "selectCountryFirst": "يرجى اختيار الدولة أولاً",
+    "name": "الاسم",
+    "nameRequired": "الاسم مطلوب",
+    "phone": "رقم الهاتف",
+    "phoneRequired": "رقم الهاتف مطلوب",
+    "email": "البريد الإلكتروني",
+    "emailRequired": "البريد الإلكتروني مطلوب",
+    "governorate": "اختر المحافظة",
+    "governorateRequired": "المحافظة مطلوبة",
+    "activityType": "نوع النشاط",
+    "activityRequired": "نوع النشاط مطلوب",
+    "address": "العنوان",
+    "addressRequired": "العنوان مطلوب",
+    "password": "كلمة المرور",
+    "passwordRequired": "كلمة المرور مطلوبة",
+    "passwordLength": "كلمة المرور يجب أن تكون 8 أحرف على الأقل",
+    "passwordConfirmation": "تأكيد كلمة المرور",
+    "confirmPasswordRequired": "تأكيد كلمة المرور مطلوب",
+    "passwordMismatch": "كلمتا المرور غير متطابقتين",
+    "accountType": "نوع الحساب",
+    "individual": "فردي",
+    "organization": "شركات",
+    "commercialRegister": "السجل التجاري",
+    "commercialRegisterRequired": "السجل التجاري مطلوب",
+    "taxNumber": "الرقم الضريبي",
+    "taxNumberRequired": "الرقم الضريبي مطلوب",
+    "agreeToTerms": "أوافق على",
+    "termsLink": "سياسة الخصوصية والشروط والأحكام",
+    "agreeToTermsError": "يجب الموافقة على الشروط والأحكام للمتابعة",
+    "verificationTitle": "توثيق الحساب",
+    "verificationMessage": "هل يمكنك إدخال سعر اللحم القايم والصافي في محافظتك؟",
+    "verifiedAccountSuccess": "تم إنشاء حسابك بنجاح وإضافتك كتاجر معتمد",
+    "next": "التالي",
+    "back": "رجوع",
+    "createButton": "إنشاء الحساب",
+    "creating": "جارٍ الإرسال...",
+    "haveAccount": "لديك حساب بالفعل؟",
+    "loginLink": "تسجيل الدخول",
+    "successMessage": "تم إنشاء الحساب بنجاح",
+    "error": "حدث خطأ أثناء إنشاء الحساب",
+    "fillAllFields": "يرجى ملء جميع الحقول المطلوبة"
+  }
   },
   "home": {
     "adsSection": {
