--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -56,43 +56,58 @@
       "loginSuccess": "Logged in successfully!",
       "forgotPassword": "Forgot your password?"
     },
-    "register": {
-      "title": "Create Account",
-      "chooseCountry": "Choose Country",
-      "selectCountry": "Select Country",
-      "uploadProfileImage": "Upload Profile Image",
-      "countryRequired": "Please select a country",
-      "selectCountryFirst": "Please select a country first",
-      "name": "Full Name",
-      "nameRequired": "Name is required",
-      "phone": "Phone Number",
-      "phoneRequired": "Phone number is required",
-      "email": "Email Address",
-      "governorate": "Select Governorate",
-      "governorateRequired": "Governorate is required",
-      "activityType": "Activity Type",
-      "activityRequired": "Activity type is required",
-      "address": "Address",
-      "addressRequired": "Address is required",
-      "password": "Password",
-      "passwordRequired": "Password is required",
-      "passwordLength": "Password must be at least 8 characters",
-      "passwordConfirmation": "Confirm Password",
-      "confirmPasswordRequired": "Password confirmation is required",
-      "passwordMismatch": "Passwords do not match",
-      "accountType": "Account Type",
-      "individual": "Individual",
-      "organization": "Organizations",
-      "next": "Next",
-      "back": "Back",
-      "createButton": "Create Account",
-      "creating": "Creating...",
-      "haveAccount": "Already have an account?",
-      "loginLink": "Login",
-      "successMessage": "Account created successfully",
-      "error": "An error occurred while creating account",
-      "fillAllFields": "Please fill all required fields"
-    }
+   "register": {
+    "title": "Create Account",
+    "chooseCountry": "Choose Country",
+    "selectCountry": "Select Country",
+    "uploadProfileImage": "Upload Profile Image",
+    "imageRequirements": "Supported formats: JPG, PNG, GIF, WEBP (Max 5MB)",
+    "removeImage": "Remove Image",
+    "invalidImageType": "Unsupported image type. Please select JPG, PNG, GIF or WEBP",
+    "imageTooLarge": "Image is too large. Maximum size is 5MB",
+    "countryRequired": "Please select a country",
+    "selectCountryFirst": "Please select a country first",
+    "name": "Full Name",
+    "nameRequired": "Name is required",
+    "phone": "Phone Number",
+    "phoneRequired": "Phone number is required",
+    "email": "Email Address",
+    "emailRequired": "Email address is required",
+    "governorate": "Select Governorate",
+    "governorateRequired": "Governorate is required",
+    "activityType": "Activity Type",
+    "activityRequired": "Activity type is required",
+    "address": "Address",
+    "addressRequired": "Address is required",
+    "password": "Password",
+    "passwordRequired": "Password is required",
+    "passwordLength": "Password must be at least 8 characters",
+    "passwordConfirmation": "Confirm Password",
+    "confirmPasswordRequired": "Password confirmation is required",
+    "passwordMismatch": "Passwords do not match",
+    "accountType": "Account Type",
+    "individual": "Individual",
+    "organization": "Organizations",
+    "commercialRegister": "Commercial Register",
+    "commercialRegisterRequired": "Commercial register is required",
+    "taxNumber": "Tax Number",
+    "taxNumberRequired": "Tax number is required",
+    "agreeToTerms": "I agree to",
+    "termsLink": "Privacy Policy and Terms & Conditions",
+    "agreeToTermsError": "You must agree to the terms and conditions to continue",
+    "verificationTitle": "Account Verification",
+    "verificationMessage": "Can you enter the live weight and net meat price in your governorate?",
+    "verifiedAccountSuccess": "Your account has been created successfully and added as a verified seller",
+    "next": "Next",
+    "back": "Back",
+    "createButton": "Create Account",
+    "creating": "Creating...",
+    "haveAccount": "Already have an account?",
+    "loginLink": "Login",
+    "successMessage": "Account created successfully",
+    "error": "An error occurred while creating account",
+    "fillAllFields": "Please fill all required fields"
+  }
   },
   "home": {
     "adsSection": {
