--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -442,6 +442,9 @@
   "dashboard": {
     "sidebar": {
       "accounts": "الحسابات",
+      "sellersReviews": "تقيمات التجار",
+      "sellersReports": "الابلاغات عن التجار",
+      "contactUs":"تواصل معنا",
       "posts": "المنشورات",
       "auctions": "المزادات",
       "additions": "الاضافات",
