--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -341,6 +341,10 @@
     "deleteError": "Failed to delete notification",
     "noNotifications": "No notifications",
     "noNotificationsDesc": "All your notifications will appear here when they arrive",
+    "noUnread": "No unread notifications",
+    "noUnreadNotifications": "All your notifications are read",
+    "noRead": "No read notifications",
+    "noReadNotifications": "You haven't read any notifications yet",
     "autoDelete": "Notifications are automatically deleted after 30 days",
     "page": "Page",
     "of": "of",
